--- a/todo-app/src/app/todos/todo-page/todo-page.component.html
+++ b/todo-app/src/app/todos/todo-page/todo-page.component.html
@@ -1,1 +1,22 @@
-<p>todo-page works!</p>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>TODO App</title>
+  </head>
+  <body>
+    <section class="todoapp">
+      <app-todo-add></app-todo-add>
+      <!-- This section should be hidden by default and shown when there are todos -->
+      <section class="main">
+        <input id="toggle-all" class="toggle-all" type="checkbox" />
+        <label for="toggle-all">Mark all as complete</label>
+        <app-todo-list></app-todo-list>
+      </section>
+      <!-- This footer should hidden by default and shown when there are todos -->
+      <app-todo-footer></app-todo-footer>
+    </section>
+  </body>
+</html>
