--- a/todo-app/src/app/todos/todo-item/todo-item.component.html
+++ b/todo-app/src/app/todos/todo-item/todo-item.component.html
@@ -2,7 +2,7 @@
   <div class="view">
     <input class="toggle" [formControl]="checkCompleted" type="checkbox" />
     <label (dblclick)="edit()" > {{ todo.text }} </label>
-    <button class="destroy"></button>
+    <button class="destroy" (click)="remove()"></button>
   </div>
   <input
     class="edit"
