--- a/todo-app/src/app/todos/todo-footer/todo-footer.component.html
+++ b/todo-app/src/app/todos/todo-footer/todo-footer.component.html
@@ -3,7 +3,10 @@
   <span class="todo-count"><strong>0</strong> item left</span>
   <!-- Remove this if you don't implement routing -->
   <ul class="filters">
-    <li>
+    <li *ngFor="let filter of filters">
+      <a href="#/" [class.selected]="filter === currentFilter" (click)="onChangeFilter(filter)"> {{ filter | titlecase }}</a>
+    </li>
+    <!--<li>
       <a class="selected" href="#/">All</a>
     </li>
     <li>
@@ -11,7 +14,7 @@
     </li>
     <li>
       <a href="#/completed">Completed</a>
-    </li>
+    </li>-->
   </ul>
   <!-- Hidden if no completed items are left ↓ -->
   <button class="clear-completed">Clear completed</button>
