--- a/todo-app/src/app/todos/todo-footer/todo-footer.component.html
+++ b/todo-app/src/app/todos/todo-footer/todo-footer.component.html
@@ -1,12 +1,15 @@
 <footer class="footer">
-  <!-- This should be `0 items left` by default -->
-  <span class="todo-count"><strong>0</strong> item left</span>
-  <!-- Remove this if you don't implement routing -->
+  <span class="todo-count"><strong>{{ pendingItems }}</strong> item left</span>
   <ul class="filters">
     <li *ngFor="let filter of filters">
-      <a href="#/" [class.selected]="filter === currentFilter" (click)="onChangeFilter(filter)"> {{ filter | titlecase }}</a>
+      <a
+        href="#/"
+        [class.selected]="filter === currentFilter"
+        (click)="onChangeFilter(filter)"
+      >
+        {{ filter | titlecase }}</a
+      >
     </li>
   </ul>
-  <!-- Hidden if no completed items are left ↓ -->
   <button class="clear-completed">Clear completed</button>
 </footer>
