--- a/todo-app/src/app/todos/todo-footer/todo-footer.component.html
+++ b/todo-app/src/app/todos/todo-footer/todo-footer.component.html
@@ -11,5 +11,5 @@
       >
     </li>
   </ul>
-  <button class="clear-completed">Clear completed</button>
+  <button class="clear-completed" (click)="onRemoveCompleted()">Clear completed</button>
 </footer>
